Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34474

Replica is not resilient to receiving multiple Aborts for the same key

    XMLWordPrintable

Details

    Description

      If we disconnect we may receive two commits/aborts (or some combination of the two) in a row. Currently for EP Buckets this would cause an exception to throw and the DCP connection to be torn down as we would not find the existing prepare in the hash table to set the prepared seqno of the commit/abort. We need to be resilient to this and allow multiple commits/aborts. We only wish to allow this for the specific disconnect/reconnect case though. Believe it's enough to make a check such that if we receive a commit/abort with current highSeqno < seqno < streamStart then we should allow the "duplicate".

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ben.huddleston Ben Huddleston
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty