MB-34474: Make replica resilient to duplicate DCPAbort

For a given window when resuming a stream it is valid for a Consumer
to receive a DCPAbort for which it does not have a corresponding
prepare. This window is (replica's current high seqno, actual stream
start seqno) (not-inclusive).

Change-Id: I8828041b4f9950d1f32c201fcbd7516f408ff2ea
Reviewed-on: http://review.couchbase.org/110308
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>