engines/ep/tests/module_tests/dcp_durability_stream_test.h
@@ -63,6 +63,21 @@ protected:
      * checks they are queued correctly for persistence.
      */
     void testReceiveDcpPrepareCommit();
+
+    /*
+     * This test checks that a DCP Consumer receives and processes correctly a
+     * DCP_ABORT message.
+     */
+    void testReceiveDcpAbort();
+
+    /*
+     * Test that a replica can receive and correctly process a DCPAbort for a
+     * prepare that it knows nothing about when in reconnecting in a specific
+     * window (highSeqno <= prepareSeqno < streamStart).
+     */
+    void testReceiveDuplicateDcpAbort(const std::string& key,
+                                      uint64_t prepareSeqno,
+                                      ENGINE_ERROR_CODE expectedResult);
 };
 
 /**
